fixed footer overlapping

--- a/web/cobrands/popravito/layout.scss
+++ b/web/cobrands/popravito/layout.scss
@@ -198,11 +198,7 @@ $primary: url('/cobrands/popravito/images/hero-desktop.svg') no-repeat right;
 }
 
 .faq-body {
-    overflow: auto;
-
-    ::-webkit-scrollbar {
-        display: none;
-    }
+    overflow: hidden;
 }
 
 .faq-footer {
@@ -464,6 +460,7 @@ $primary: url('/cobrands/popravito/images/hero-desktop.svg') no-repeat right;
 
 .central-section-two-col {
     display: flex;
+    overflow: auto;
 }
 
 .two-col-left {
